RAIN-2113 (W&S :: Public Domain Search :: Apk Alignment Issues) (#2168)

--- a/frontend/web/rainmaker/dev-packages/egov-wns-dev/src/index.scss
+++ b/frontend/web/rainmaker/dev-packages/egov-wns-dev/src/index.scss
@@ -184,3 +184,9 @@ body {
     }
   }
   
+  @media only screen and (max-width: 600px) {
+    .public-domain-search-position {
+      top: 50px !important;
+      position: relative !important;
+    }
+  }
